# dagtor

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml
dagtor/: __init__.py  logger.py  main.py
dagtor/dag/: databricks_job_task.py  mock_task.py  pipeline.py  task.py
dagtor/state/: __init__.py  client.py  connection_manager.py  pipeline_execution_manager.py  pipeline_manager.py  task_execution_manager.py
dagtor/state/data/: __init__.py  pipeline.py
dagtor/test/: ManagerTest.py  PipelineTest.py
scrap/: client.py
src/: main.py
src/backend/: __init__.py  client.py
src/dag/: __init__.py  databricks_job_task.py  execution_state.py  mock_task.py  notebook_task.py  pipeline.py  step.py  task.py
src/state/: client.py
src/state/data/: __init__.py  pipeline.py
src/test/: PipelineTest.py
src/tests/: test.py
tests/: test.py
